[gd_scene load_steps=4 format=3 uid="uid://dvgoy5fid7fr5"]

[ext_resource type="Script" path="res://addons/rivet/devtools/dock/dev_tab.gd" id="1_q8kto"]
[ext_resource type="PackedScene" uid="uid://bogw8dj8rr202" path="res://addons/rivet/devtools/dock/elements/env_menu_button.tscn" id="2_e4lc1"]
[ext_resource type="Script" path="res://addons/rivet/devtools/dock/elements/loading_button.gd" id="4_u02u4"]

[node name="Develop" type="MarginContainer"]
script = ExtResource("1_q8kto")

[node name="DevelopContent" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Environment" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="Environment" type="Label" parent="DevelopContent/Environment"]
layout_mode = 2
size_flags_horizontal = 3
text = "Environment"

[node name="EnvironmentDescription" type="RichTextLabel" parent="DevelopContent/Environment"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Configure which backend to connect to. [url=https://rivet.gg]Learn more[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="AuthEnvSelector" parent="DevelopContent/Environment" instance=ExtResource("2_e4lc1")]
layout_mode = 2

[node name="EnvEndpointLabel" type="RichTextLabel" parent="DevelopContent/Environment"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Endpoint: ?"
fit_content = true

[node name="WarningLabel" type="RichTextLabel" parent="DevelopContent/Environment"]
unique_name_in_owner = true
layout_mode = 2
text = "Make sure you've deployed your game server. Using different versions can cause unexpected errors."
fit_content = true
scroll_active = false

[node name="DeployButton" type="Button" parent="DevelopContent/Environment"]
unique_name_in_owner = true
layout_mode = 2
text = "Deploy"

[node name="HSeparator" type="HSeparator" parent="DevelopContent"]
layout_mode = 2

[node name="Game Server" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="GameServer" type="Label" parent="DevelopContent/Game Server"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Server"

[node name="HBoxContainer" type="HBoxContainer" parent="DevelopContent/Game Server"]
layout_mode = 2

[node name="GameServerStartButton" type="Button" parent="DevelopContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="GameServerRestartButton" type="Button" parent="DevelopContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart
"

[node name="GameServerStopButton" type="Button" parent="DevelopContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="GameServerStatusLabel" type="Label" parent="DevelopContent/Game Server"]
unique_name_in_owner = true
layout_mode = 2
text = "Game server not running"

[node name="GameServerShowLogs" type="CheckBox" parent="DevelopContent/Game Server"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Server Logs"

[node name="HSeparator2" type="HSeparator" parent="DevelopContent"]
layout_mode = 2

[node name="Backend" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="Backend" type="Label" parent="DevelopContent/Backend"]
layout_mode = 2
size_flags_horizontal = 3
text = "Backend"

[node name="BackendGenerateSdk" type="Button" parent="DevelopContent/Backend"]
unique_name_in_owner = true
layout_mode = 2
text = "Generate SDK"
script = ExtResource("4_u02u4")

[node name="BackendEditConfig" type="Button" parent="DevelopContent/Backend"]
layout_mode = 2
text = "Edit Config"

[node name="HSeparator3" type="HSeparator" parent="DevelopContent"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="BackendServer" type="Label" parent="DevelopContent/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Backend Server
"

[node name="HBoxContainer" type="HBoxContainer" parent="DevelopContent/VBoxContainer"]
layout_mode = 2

[node name="BackendServerStartButton" type="Button" parent="DevelopContent/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="BackendServerRestartButton" type="Button" parent="DevelopContent/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart
"

[node name="BackendServerStopButton" type="Button" parent="DevelopContent/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="BackendServerStatusLabel" type="Label" parent="DevelopContent/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Game server not running"

[node name="BackendServerShowLogs" type="CheckBox" parent="DevelopContent/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Server Logs"

[connection signal="pressed" from="DevelopContent/Game Server/HBoxContainer/GameServerStartButton" to="." method="_on_game_server_start_pressed"]
[connection signal="pressed" from="DevelopContent/Game Server/HBoxContainer/GameServerRestartButton" to="." method="_on_game_server_restart_pressed"]
[connection signal="pressed" from="DevelopContent/Game Server/HBoxContainer/GameServerStopButton" to="." method="_on_game_server_stop_pressed"]
[connection signal="pressed" from="DevelopContent/Backend/BackendGenerateSdk" to="." method="_on_backend_generate_sdk_pressed"]
[connection signal="pressed" from="DevelopContent/Backend/BackendEditConfig" to="." method="_on_backend_edit_config_pressed"]
[connection signal="pressed" from="DevelopContent/VBoxContainer/HBoxContainer/BackendServerStartButton" to="." method="_on_backend_server_start_pressed"]
[connection signal="pressed" from="DevelopContent/VBoxContainer/HBoxContainer/BackendServerRestartButton" to="." method="_on_backend_server_restart_pressed"]
[connection signal="pressed" from="DevelopContent/VBoxContainer/HBoxContainer/BackendServerStopButton" to="." method="_on_backend_server_stop_pressed"]
